--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.13.3",
     "feed": "^0.3.0",
     "front-matter": "^2.1.1",
+    "fs": "0.0.1-security",
     "highlights": "^2.0.1",
     "html": "1.0.0",
     "http-server": "^0.9.0",
